# rencfs

./: .dockerignore  CLAUDE.md  Cargo.toml  README.md  check-before-push-linux.sh  check-before-push.bat  check-before-push.sh  deny.toml  rencfs.h
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/__workflows/: build_and_tests_reusable.yaml
.github/workflows/: build_and_tests.yaml  build_and_tests2.yaml  build_and_tests_reusable.yaml  build_and_tests_reusable2.yaml  check.yml  jekyll-gh-pages.yaml  package_reusable.yaml  package_reusable2.yaml  release.yaml  release2.yaml  test.yml  version_reusable.yaml
benches/: encryptedfs.rs
data/inodes/: 1
data/security/: key.enc  key.salt
doc/: flows.md
doc/uml/: change_pass.mmd  change_pass.puml  close_file.md  create_file.md  lib_rencfs_usage.md  lib_usage.md  mount_flow.puml  open_file.md  open_file.puml  read.md  read.mmd  read.puml
docker/: Dockerfile  README.md
docs/: flows.md
docs/readme/: Testing.md  (+5 more)
examples/: change_password_cli.rs  crypto_write_read.rs  encryptedfs.rs  file_handling.rs  file_layer.rs  filesystem_dbg.rs  internal_ring.rs  mount.rs  rs_example.rs  update_pswd_with_recover_key.rs  wal.rs
examples/crypto_write_read/: Cargo.toml
java-bridge/: Cargo.toml
my-log/: wal-5-cp  wal-6
scripts/: check-before-push.sh  check-licenses.sh
src/: arc_hashmap.rs  auth.rs  c_api.rs  crypto.rs  encryptedfs.rs  keyring.rs  lib.rs  main.rs  mount.rs  run.rs  stream_util.rs  test_common.rs
tests/: rencfs_itest.rs
(+64 files in other folders)
