[package]
name = "crypto_write_read"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
rand_core = "0.6.4"
rencfs = "0.14.11"
shush-rs = "0.1.11"
tracing = "0.1.41"
tokio = { version = "1.36", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }